--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="relative w-72 h-72 md:w-96 md:h-96 group">
                     <div class="absolute inset-0 bg-gradient-to-tr from-purple-500 to-blue-500 rounded-3xl blur-2xl opacity-20 group-hover:opacity-40 transition-opacity"></div>
                     <div class="relative w-full h-full rounded-3xl border border-white/10 overflow-hidden glass">
-                        <img src="Screenshot 2026-02-07 at 4.39.29 PM.png" alt="Tawhid Laskar Portrait" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
+                        <img src="https://i.ibb.co/HTscKV73/Screenshot-2026-02-07-at-4-39-29-PM.png" alt="Tawhid Laskar Portrait" class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700">
                     </div>
                     <div class="absolute -bottom-6 -left-6 glass p-4 rounded-2xl border border-white/10 animate-bounce-slow">
                         <p class="text-xs font-mono text-purple-400 mb-1">Current Tech</p>
