--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Tawhid Laskar | Full Stack Developer & UI/UX Architect">
     <meta property="og:description" content="Expert Full Stack Developer in Assam specializing in Python, React, and Scalable Web Architectures.">
     <meta property="og:image" content="assets/og-image.png">
+    <meta name="google-site-verification" content="UUXZt4xFZisQ3U0HLe2OUTVtqRHA1EQLVFrv23_Q2rM" />
 
     <script type="application/ld+json">
     {
